--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "counterapp1",
+  "name": "app1",
   "version": "0.0.1",
   "scripts": {
     "ng": "ng",
@@ -19,8 +19,9 @@
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
+    "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^10.0.0",
-    "coretestdub": "0.0.0",
+    "coretestdub": "0.0.6",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
